--- a/_posts/2020-3-15-Java的基础知识（一）.md
+++ b/_posts/2020-3-15-Java的基础知识（一）.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:     Java的基本知识
-subtitle:  数据类型、变量、输入输出、数组、循环、条件判断
+title:     Java的基本知识（一）
+subtitle:  数据类型、变量、输入输出
 date:       2020-3-15
 author:     One-Punch-Man
 header-img: "img/man-8.jpg"
@@ -48,7 +48,7 @@ tags:
 
 #### JDK的安装
 
-​	首先从[Oracle官网](<https://www.oracle.com/java/technologies/javase-downloads.html> )下载你JDK安装包，在安装的时候**安装路径中切记不要出现空格以及中文**。安装完成以后，需要在Path环境变量中添加JDK的环境，它指向你安装的JDK安装目录下的`bin`目录下，例如：
+​	首先从[Oracle官网](https://www.oracle.com/java/technologies/javase-downloads.html )下载你JDK安装包，在安装的时候**安装路径中切记不要出现空格以及中文**。安装完成以后，需要在Path环境变量中添加JDK的环境，它指向你安装的JDK安装目录下的`bin`目录下，例如：
 
 ```
 在我的电脑里面的环境变量path中添加：
@@ -89,6 +89,48 @@ public class Hello {
     }
 }
 ```
+
+### 输入与输出
+
+- 输出
+
+  ```java
+  public class Main {
+      public static void main(String[] args) {
+          System.out.println("Hello world!"); // 输出Hello World！并且换行
+          System.out.print("Hello world!"); // 输出Hello World！但不进行换行
+          System.out.printf("%d",a); // 格式化输出整数a
+          System.out.printf("%%x",b); // 格式化输出十六进制整数b
+          System.out.printf("%f",c1); // 格式化输出浮点数c1
+          System.out.printf("%.2f",c2); // 格式化输出显示两位小数的浮点数c2
+          System.out.printf("%e",d); // 格式化输出科学计数法表示的浮点数d
+          System.out.printf("%s",e); // 格式化输出字符串e
+      }
+  }  
+  ```
+
+- 输入
+
+  ```java
+  import java.util.Scanner;//1.导入输入所依赖的包
+  
+  public class Main {
+      public static void main(String[] args) {
+          Scanner scanner = new Scanner(System.in); //2. 创建Scanner对象
+           //3.调用Scanner对象的方法，
+          String name = scanner.nextLine(); //读取一行输入并获取字符串
+          String sex = scanner.next(); //读取一行输入并获取字符串
+          /*
+          next()的输入时不包括有效字符前的空格(也就是在你实际输出前面所打的空格是不会输出在控制台的)；在输入有效字符后，输入的空格、Tab建、Enter建会被看作是分隔符或者结束符。
+          nextLine()的输入是包括有效字符前的空格的，而且只有输入Enter建才会被视作结束输入。
+          */
+          int age = scanner.nextInt(); // 读取一行输入并获取整数
+      }
+  }
+  ```
+
+  
+
 
 ### 变量与数据类型
 
