--- a/_posts/2020-3-1-Mysql的基本知识.md
+++ b/_posts/2020-3-1-Mysql的基本知识.md
@@ -141,3 +141,41 @@ tags:
 
 #### DML
 
+- 插入
+
+  ```mysql
+  insert into 表名(字段1,字段2,字段3)values(值1,值2,值3);
+  ```
+
+  - 第一种插入方法（标准）：
+
+    ```mysql
+    mysql> insert into user(user_name,password,email,mobile,fee,age)values('张三','123456','zhangsan@163.com','12345678987',11.11,41);
+    Query OK, 1 row affected (0.05 sec)
+    ```
+
+  - 第二种插入方法（推荐）：
+
+    ```mysql
+    mysql> insert into user(user_name,age)values('李四',25);
+    Query OK, 1 row affected, 3 warnings (0.06 sec)
+    ```
+
+    
+
+  - 第三种插入方法（不使用）：
+
+    ```mysql
+    mysql> insert into user values(6,'王五','888888','wangwu@163.com','45214563211',55.22,45);
+    Query OK, 1 row affected (0.06 sec)
+    
+    ```
+    效果如下：
+
+    ​			![插入语句](/img/Mysql_01.png)
+
+    在进行插入操作时，所插入值和字段是一一对应的。
+
+- 更新
+
+- 删除
