--- a/_posts/2020-3-1-Mysql的基本知识.md
+++ b/_posts/2020-3-1-Mysql的基本知识.md
@@ -165,17 +165,45 @@ tags:
 
   - 第三种插入方法（不使用）：
 
-    ```mysql
-    mysql> insert into user values(6,'王五','888888','wangwu@163.com','45214563211',55.22,45);
-    Query OK, 1 row affected (0.06 sec)
-    
-    ```
+        ```mysql
+        mysql> insert into user values(6,'王五','888888','wangwu@163.com','45214563211',55.22,45);
+        Query OK, 1 row affected (0.06 sec)
+      
+        ```
     效果如下：
 
     ​			![插入语句](/img/Mysql_01.png)
 
-    在进行插入操作时，所插入值和字段是一一对应的。
+    **在进行插入操作时，所插入值和字段是一一对应的。**
 
 - 更新
 
+  ```mysql
+  update 表名 set 字段1=值1,字段2=值2，字段3=值3 where 条件;
+  ```
+
+  ```
+  mysql> update user set age = 100;
+  mysql> update user set fee = 10.00 where fee = 0.00;
+  mysql> update user set user_name = '张三' where id = 8;
+  mysql> update user set password = 666666 where password = '';
+  mysql> update user set mobile ='lzb@163.com ' where id in(5,7);
+  mysql> update user set email = 'hahha@163.com' where id between 5 and 8;
+  ```
+
+  结果为：
+
+  ​		![更新操作](/img/Mysql_02.png)
+
+  **不写条件会修改所有的数据。**
+
 - 删除
+
+```mysql
+delete from 表名 where 条件；		
+```
+
+​			![删除操作](/img/Mysql_03.png)
+
+**不写条件会删除所有的数据**。清空表中数据的两种方法：`delete from 表名`或者`truncate 表名`。第二种会把自增的`id`也清除，`delete`不会删除自增的`id`。
+
