--- a/_posts/2020-3-1-Mysql的基本知识.md
+++ b/_posts/2020-3-1-Mysql的基本知识.md
@@ -168,7 +168,7 @@ tags:
         ```mysql
         mysql> insert into user values(6,'王五','888888','wangwu@163.com','45214563211',55.22,45);
         Query OK, 1 row affected (0.06 sec)
-      
+          
         ```
     效果如下：
 
@@ -206,4 +206,172 @@ delete from 表名 where 条件；
 ​			![删除操作](/img/Mysql_03.png)
 
 **不写条件会删除所有的数据**。清空表中数据的两种方法：`delete from 表名`或者`truncate 表名`。第二种会把自增的`id`也清除，`delete`不会删除自增的`id`。
+
+#### DCL
+
+- 把使用-hlocalhost的连接方式改成-h192.168.1.106连接。(设置指定的ip连接数据库)
+
+  ```mysql
+  mysql> show databases;
+  mysql> use mysql;
+  mysql> show tables;
+  mysql> select user,host from user;
+  mysql> update user set host = '192.168.1.106' where host = 'localhost';
+  mysql> flush privileges;
+  ```
+
+  ​	![修改连接方式](/img/Mysql_04.png)
+
+- 修改密码
+
+  - ​	
+
+    ```mysql
+    mysql> user mysql;
+    mysql> use mysql;
+    mysql> update user set password=password('root')where user = 'root';
+    mysql> flush privileges;
+    ```
+
+    ​		![修改密码](/img/Mysql_05.png)
+
+  -   
+
+    ```mysql
+    C:\Users\admin>mysqladmin -uroot -proot password 123456     
+    ```
+
+- 忘记密码
+
+  1. 管理员模式下运行`cmd`，输如`net stop mysql`;关闭服务器。
+
+  2. 输入`mysqld --skip-grant-tables`;开启一个越过权限检查的进程。
+
+  3. 管理员模式另外打开一个`cmd`，输入`mysql`；这样就越过权限管理进入`mysql`中。
+
+  4.  
+
+     ```mysql
+     mysql> show databases;
+     mysql> use mysql;
+     mysql> update user set password = password('root') where user ='root';
+     mysql> flush privileges;
+     mysql> exit    ---------------到这里已经重置密码了
+     C:\Windows\system32>netstat -an
+     ```
+
+  5. 最好使用`net stop mysql`和`net start mysql`重启下`mysql`。
+
+- 创建用户：
+
+  ```mysql
+  create user 用户名 @'IP地址' identified by '密码'；
+  ```
+
+  ![创建用户](/img/Mysql_06.png)
+
+  创造的这一个用户只能在指定的ip地址上登陆数据库，要想要在任意的ip上登陆数据库，要把`ip地址`写成`%`。
+
+  ![任意ip登陆](Mysql_07.png)
+
+- 用户授权：
+
+  ```mysql
+  grant 权限1,权限2,...on 数据库名.* to 用户名 @IP地址;
+  ```
+
+  ![第一部分](/img/Mysql_08.png)
+
+  ![第二部分](/img/Mysql_09.png)
+
+  授权该用户对所有的数据库有此权限要把`数据库名.*`写成`*.*`。
+
+  授权该用户拥有所有的权限，就把`权限1,权限2,...`改成`ALL或者`ALL PRIVILEGES`。
+
+  ```mysql
+  MYSQL> grant all privileges on *.* to 'test'@'192.168.1.106';
+  ```
+
+  创建用户并且授权：
+
+  ```mysql
+  mysql> grant select,delete,update,insert on my_sql.* to 'admin1'@'192.168.1.106' identified by '123456';
+  Query OK, 0 rows affected (0.00 sec)
+  
+  mysql> flush privileges;
+  Query OK, 0 rows affected (0.00 sec)
+  
+  mysql> select user,password,host from user;
+  +--------+-------------------------------------------+---------------+
+  | user   | password                                  | host          |
+  +--------+-------------------------------------------+---------------+
+  | root   | *6BB4837EB74329105EE4568DDA7DC67ED2CA2AD9 | localhost     |
+  | admin  | *4ACFE3202A5FF5CF467898FC58AAB1D615029441 | %             |
+  | test   | *81F5E21E35407D884A6CD4A731AEBFB6AF209E1B | 192.168.1.106 |
+  | admin1 | *6BB4837EB74329105EE4568DDA7DC67ED2CA2AD9 | 192.168.1.106 |
+  +--------+-------------------------------------------+---------------+
+  4 rows in set (0.01 sec)
+  ```
+
+  
+
+- 撤销权限
+
+  ```mysql
+  revoke 权限1,权限2,... on 数据库名.* from 用户名 @ip地址;
+  ```
+
+  ```mysql
+  mysql> revoke update,insert on my_sql.* from 'test'@'192.168.1.106';
+  Query OK, 0 rows affected (0.00 sec)
+  
+  mysql> flush privileges;
+  Query OK, 0 rows affected (0.00 sec)
+  ```
+
+  ![撤销权限](/img/Mysql_10.png)
+
+- 查看权限
+
+  ```mysql
+  show grants for 用户名@ip地址;
+  ```
+
+  ```mysql
+  
+  mysql> show grants for test@192.168.1.106;
+  +-----------------------------------------------------------------------------------------------------------------+
+  | Grants for test@192.168.1.106                                                                                   |
+  +-----------------------------------------------------------------------------------------------------------------+
+  | GRANT USAGE ON *.* TO 'test'@'192.168.1.106' IDENTIFIED BY PASSWORD '*81F5E21E35407D884A6CD4A731AEBFB6AF209E1B' |
+  +-----------------------------------------------------------------------------------------------------------------+
+  1 row in set (0.00 sec)
+  ```
+
+  
+
+- 删除用户
+
+  ```mysql
+  drop user 用户名@ip地址;
+  ```
+
+  ```mysql
+  mysql> drop user 'admin1'@'192.168.1.106';
+  Query OK, 0 rows affected (0.00 sec)
+  
+  mysql> flush privileges;
+  Query OK, 0 rows affected (0.01 sec)
+  
+  mysql> select user,host,password from user;
+  +-------+---------------+-------------------------------------------+
+  | user  | host          | password                                  |
+  +-------+---------------+-------------------------------------------+
+  | root  | localhost     | *6BB4837EB74329105EE4568DDA7DC67ED2CA2AD9 |
+  | admin | %             | *4ACFE3202A5FF5CF467898FC58AAB1D615029441 |
+  | test  | 192.168.1.106 | *81F5E21E35407D884A6CD4A731AEBFB6AF209E1B |
+  +-------+---------------+-------------------------------------------+
+  ```
+
+  
 
