--- a/_posts/2020-3-1-Mysql的基本知识.md
+++ b/_posts/2020-3-1-Mysql的基本知识.md
@@ -272,7 +272,7 @@ delete from 表名 where 条件；
 
   创造的这一个用户只能在指定的ip地址上登陆数据库，要想要在任意的ip上登陆数据库，要把`ip地址`写成`%`。
 
-  ![任意ip登陆](Mysql_07.png)
+  ![任意ip登陆](/img/Mysql_07.png)
 
 - 用户授权：
 
