--- a/_posts/2020-3-24-Java的基础知识（二）.md
+++ b/_posts/2020-3-24-Java的基础知识（二）.md
@@ -92,7 +92,7 @@ boolean isTeenager = age >6 && age <18; // true
     - 负数：将**绝对值**转换为二进制，再进行**按位取反加1**。
 
       ```java
-          -20的绝对值转换为二进制： 0001 0100
+          	-20的绝对值转换为二进制： 0001 0100
          				 按位取反： 1110 1011
          				 再加一:   1110  1100
       ```
@@ -103,7 +103,7 @@ boolean isTeenager = age >6 && age <18; // true
     
     - 负数：先进制**按位取反加1**，然后转为十进制整数后添加**负号**即可。
     
-      ```
+      ```java
           	二进制数：  1110 1100
               按位取反 ： 0001 0011
               再加一：    0001 0100
@@ -215,4 +215,139 @@ boolean isTeenager = age >6 && age <18; // true
   int k = n >>> 31; // 00000000 00000000 00000000 00000001 = 1
   ```
 
-  
+## 分支结构
+
+### If结构
+
+```java
+    if(条件表达式){
+       				 语句块; 
+    }
+```
+
+### If-else结构
+
+```java
+    if(条件表达式){
+        语句块1;
+    }
+    else{
+        语句块2;
+    }
+```
+
+### if-else if-else结构
+
+```java
+    if(条件表达式){
+        语句块1;
+    }else if(条件表达式2){
+        语句块2;   
+    }else{
+        语句块3;
+    }
+```
+
+### switch-case 结构
+
+```java
+    switch(表达式/变量){
+        case 字面值1:
+                语句块1;
+                break;
+        case 字面值2:
+                语句块2;
+                break;
+           .
+           .
+           .
+           .
+        default:
+            	语句块3；
+    }
+```
+
+## 循环结构
+
+### while循环
+
+```java
+    while(条件表达式){
+        循环体;
+    }//只有当条件成立时才会进入循环体执行循环体
+---------------------------------------------------------------------------------------
+       while(True){
+        循环体;
+    } //无线循环
+```
+
+### do-while循环
+
+```java
+  do{
+        循环体;
+    }while(条件表达式);//先循环一次在进行条件判断
+```
+
+### for循环
+
+```java
+    for(初始表达式1;条件表达式2;修改初始条件的表达式3){        
+            循环体;
+    }//只有当条件成立时才会进入循环体执行循环体
+----------------------------------------------------------------------------------------
+    for(;;){
+        循环体;
+    }//无限循环
+```
+
+### break和continue
+
+​	`break`语句通常都是配合`if`语句使用。要特别注意，`break`语句总是跳出自己所在的那一层循环；也就是说在嵌套循环中它会跳出内层`for`循环，但不会跳出外层`for`循环。而`continue`则是提前结束本次循环，直接继续执行下次循环。
+
+## 数组
+
+- 数组是相同数据类型的多个元素的容器，这些元素按线性顺序排列。
+
+- 数组一旦创建后，大小不可以再变化了。
+
+- 数组所有元素初始化为默认值，整型都是`0`，浮点型是`0.0`，布尔型是`false`。
+
+- 可以用`数组变量.length`获取数组大小。
+
+- 数组和字符串一样，都是引用数据类型。
+
+### 一维数组
+
+​	一维数组本质就是一块连续的内存空间，可以在不同的存储单元记录不同的数据内容。
+
+- 数组名称：类似于变量的名称，用于记录连续内存空间中的**首地址**。
+- 数组元素：主要指存放在数组内存空间中的**数据内容**。
+- 数组长度：主要指数组中元素的个数，通常使用`数组名.length`的方式来获取
+- 数组下标：主要指数组元素的编号，从0开始一直到数组的长度-1.
+
+```java
+        //声明
+         int[] arr = new int[5]//声明一个可以存储5个int型数据的arr数组
+         int[] arr1 = new int[] { 68, 79, 91, 85, 62 };//声明并赋值一个arr1数组
+         int[] arr2 = { 68, 79, 91, 85, 62 };//声明并赋值一个arr2数组
+		 System.arrayCopy(原数组,原数组要复制的起始位置,目标数组,起始位置,复制长度);//数组复制
+```
+
+​	
+
+## 二维数组
+
+​	二维数组本质就是由一维数组组成的数组，也就是说每个元素都是一个一位数组。
+
+```java
+        int[][] arr = new int[2][3]; //表示声明一个具有2行3列的二维数组
+		int[][] arr1 = {{1,3,5,7},{2,4,6},{8,9,10,11,15}};//声明并赋值一个二维数组
+```
+
+- `arr`代表数组的名称，也就是用于记录该数组内存空间的**首地址**。
+- `arr[0]` 代表二维数组中的第一行，也就是一个一维数组。
+- `arr[0][0] `代表二维数组中下标为0行0列的元素，也就是第一个一个维数组中的**第一个元素**。
+- `arr.length` 代表二维数组的大小，也就是二维数组的**行数**。
+-  `arr[0].length`代表就是二维数组中第一行的大小，也就是一维数组的大小，也就是**列数**。
+
