--- a/_posts/2020-2-2-Java的基础知识（二）.md
+++ b/_posts/2020-2-2-Java的基础知识（二）.md
@@ -2,7 +2,7 @@
 layout:     post
 title:     Java的基本知识（二）
 subtitle:  流程控制、数组、数据运算
-date:       2020-3-24
+date:       2020-2-2
 author:     One-Punch-Man
 header-img: "img/man-9.jpg"
 catalog: true
@@ -70,7 +70,7 @@ boolean isTeenager = age >6 && age <18; // true
 - `!`：表示逻辑非运算符，相当于取反，真为假 ，假为真
 
 
-  **&& 和 || 具备短路的特性；在`&&`中，若第一个条件为假则整个表达式一定为假，此时跳过第二个条件的执行。在`||`中，若第一个条件为真则整个表达式一定为真，此时跳过第二个条件的执行。**
+  && 和 || 具备短路的特性；在`&&`中，若第一个条件为假则整个表达式一定为假，此时跳过第二个条件的执行。在`||`中，若第一个条件为真则整个表达式一定为真，此时跳过第二个条件的执行。
 
 ##### 三目运算
 
