--- a/_posts/2020-2-16-Mysql的基本知识.md
+++ b/_posts/2020-2-16-Mysql的基本知识.md
@@ -313,8 +313,6 @@ delete from 表名 where 条件；
   4 rows in set (0.01 sec)
   ```
 
-  
-
 - 撤销权限
 
   ```mysql
@@ -373,5 +371,468 @@ delete from 表名 where 条件；
   +-------+---------------+-------------------------------------------+
   ```
 
-  
+#### DQL
 
+基本查询语句
+
+```mysql
+select * from 表名 where 条件;	
+select 字段1,字段2,.... from 表名 where 条件;
+
+mysql> select * from user;
++----+-----------+----------+------------------+-------------+-------+-----+
+| id | user_name | password | email            | mobile      | fee   | age |
++----+-----------+----------+------------------+-------------+-------+-----+
+|  4 | 张三      | 123456   | zhangsan@163.com | 12345678987 | 11.11 | 100 |
+|  5 | 李四      | 666666   | hahha@163.com    | lzb@163.com | 10.00 | 100 |
+|  6 | 王五      | 888888   | hahha@163.com    | 45214563211 | 55.22 | 100 |
+|  7 | 赵四      | 666666   | hahha@163.com    | lzb@163.com | 10.00 | 100 |
++----+-----------+----------+------------------+-------------+-------+-----+
+4 rows in set (0.07 sec)
+```
+过滤重复的列值
+
+```mysql
+select distinct 字段1 from 表名;	
+
+mysql> select distinct email from user;
++------------------+
+| email            |
++------------------+
+| zhangsan@163.com |
+| hahha@163.com    |
++------------------+
+2 rows in set (0.00 sec)
+```
+连接多个字段并重新命名
+
+```mysql
+select concat(字段1,字段2,....) as 新字段名 from 表名;
+
+mysql> select concat(user_name,email,age)as new_name from user;
++-------------------------+
+| new_name                |
++-------------------------+
+| 张三zhangsan@163.com100 |
+| 李四hahha@163.com100    |
+| 王五hahha@163.com100    |
+| 赵四hahha@163.com100    |
++-------------------------+
+4 rows in set (0.00 sec)
+```
+连接多个字段并且在每两个字段之间添加分隔符
+
+```mysql
+select concat_ws('分隔符',字段1,字段2,....) as 新字段名 from 表名;
+
+mysql> select concat_ws('===',user_name,email,age)as new_name from user;
++-------------------------------+
+| new_name                      |
++-------------------------------+
+| 张三===zhangsan@163.com===100 |
+| 李四===hahha@163.com===100    |
+| 王五===hahha@163.com===100    |
+| 赵四===hahha@163.com===100    |
++-------------------------------+
+4 rows in set (0.03 sec)
+
+mysql> select concat_ws(' =  ',user_name,email,age)as new_name from user;
++---------------------------------+
+| new_name                        |
++---------------------------------+
+| 张三 =  zhangsan@163.com =  100 |
+| 李四 =  hahha@163.com =  100    |
+| 王五 =  hahha@163.com =  100    |
+| 赵四 =  hahha@163.com =  100    |
++---------------------------------+
+4 rows in set (0.00 sec)
+```
+- 模糊查询
+
+  - 左模糊
+
+    ```mysql
+    select * from 表名 where 字段 like '%字符串';
+    
+    mysql> select * from user where user_name like '%张';
+    Empty set (0.00 sec)
+    
+    mysql> select * from user where user_name like '%三';
+    +----+-----------+----------+------------------+-------------+-------+-----+
+    | id | user_name | password | email            | mobile      | fee   | age |
+    +----+-----------+----------+------------------+-------------+-------+-----+
+    |  4 | 张三      | 123456   | zhangsan@163.com | 12345678987 | 11.11 | 100 |
+    +----+-----------+----------+------------------+-------------+-------+-----+
+    1 row in set (0.00 sec)
+    ```
+
+  - 右模糊
+
+    ```mysql
+    select * from 表名 where 字段 like '字符串%';
+    
+    mysql> select * from user where user_name like '张%';
+    +----+-----------+----------+------------------+-------------+-------+-----+
+    | id | user_name | password | email            | mobile      | fee   | age |
+    +----+-----------+----------+------------------+-------------+-------+-----+
+    |  4 | 张三      | 123456   | zhangsan@163.com | 12345678987 | 11.11 | 100 |
+    +----+-----------+----------+------------------+-------------+-------+-----+
+    1 row in set (0.00 sec)
+    
+    mysql> select * from user where user_name like '三%';
+    Empty set (0.00 sec)
+    ```
+  - 全模糊
+
+    ```mysql
+    select * from 表名 where 字段 like '%字符串%';
+    
+    mysql> select * from user where user_name like '%张%';
+    +----+-----------+----------+------------------+-------------+-------+-----+
+    | id | user_name | password | email            | mobile      | fee   | age |
+    +----+-----------+----------+------------------+-------------+-------+-----+
+    |  4 | 张三      | 123456   | zhangsan@163.com | 12345678987 | 11.11 | 100 |
+    +----+-----------+----------+------------------+-------------+-------+-----+
+    1 row in set (0.00 sec)
+    
+    mysql> select * from user where user_name like '%三%';
+    +----+-----------+----------+------------------+-------------+-------+-----+
+    | id | user_name | password | email            | mobile      | fee   | age |
+    +----+-----------+----------+------------------+-------------+-------+-----+
+    |  4 | 张三      | 123456   | zhangsan@163.com | 12345678987 | 11.11 | 100 |
+    +----+-----------+----------+------------------+-------------+-------+-----+
+    1 row in set (0.00 sec)
+    ```
+
+- 排序
+
+  - 升序排列
+
+    ```mysql
+    slect * from 表名 order by 字段名;	
+    
+    mysql> select * from user order by id;
+    +----+-----------+----------+------------------+-------------+-------+-----+
+    | id | user_name | password | email            | mobile      | fee   | age |
+    +----+-----------+----------+------------------+-------------+-------+-----+
+    |  4 | 张三      | 123456   | zhangsan@163.com | 12345678987 | 11.11 | 100 |
+    |  5 | 李四      | 666666   | hahha@163.com    | lzb@163.com | 10.00 | 100 |
+    |  6 | 王五      | 888888   | hahha@163.com    | 45214563211 | 55.22 | 100 |
+    |  7 | 赵四      | 666666   | hahha@163.com    | lzb@163.com | 10.00 | 100 |
+    +----+-----------+----------+------------------+-------------+-------+-----+
+    4 rows in set (0.00 sec)
+    ```
+
+  - 倒序排列
+
+    ```mysql
+    slect * from 表名 order by 字段名 desc;
+    
+    mysql> select * from user order by id desc;
+    +----+-----------+----------+------------------+-------------+-------+-----+
+    | id | user_name | password | email            | mobile      | fee   | age |
+    +----+-----------+----------+------------------+-------------+-------+-----+
+    |  7 | 赵四      | 666666   | hahha@163.com    | lzb@163.com | 10.00 | 100 |
+    |  6 | 王五      | 888888   | hahha@163.com    | 45214563211 | 55.22 | 100 |
+    |  5 | 李四      | 666666   | hahha@163.com    | lzb@163.com | 10.00 | 100 |
+    |  4 | 张三      | 123456   | zhangsan@163.com | 12345678987 | 11.11 | 100 |
+    +----+-----------+----------+------------------+-------------+-------+-----+
+    4 rows in set (0.00 sec)
+    ```
+
+- 聚合函数
+
+  - 查询表的记录数
+
+    ```mysql
+    select COUNT(*) from 表名;
+    
+    mysql> select count(*) from user;
+    +----------+
+    | count(*) |
+    +----------+
+    |        4 |
+    +----------+
+    1 row in set (0.00 sec)
+    ```
+
+  - 查询这一列的的和
+
+    ```mysql
+    select SUN(列名) from 表名;
+    
+    mysql> select sum(age) from user;
+    +----------+
+    | sum(age) |
+    +----------+
+    |      400 |
+    +----------+
+    1 row in set (0.00 sec) 
+    ```
+
+  - 查询这一列的平均值
+
+    ```mysql
+    select AVG(列名) from 表名;
+    
+    mysql> select avg(id) from user;
+    +---------+
+    | avg(id) |
+    +---------+
+    |  5.5000 |
+    +---------+
+    1 row in set (0.00 sec)
+    ```
+
+  - 查询这一列的最大值
+
+    ```mysql
+    select MAX(列名) from 表名;
+    
+    mysql> select max(id) from user;
+    +---------+
+    | max(id) |
+    +---------+
+    |       7 |
+    +---------+
+    1 row in set (0.00 sec)
+    ```
+
+  - 查询这一列的最小值
+
+    ```mysql
+    select MIN(列名) from 表名;
+    
+    mysql> select min(id) from user;
+    +---------+
+    | min(id) |
+    +---------+
+    |       4 |
+    +---------+
+    1 row in set (0.00 sec)
+    ```
+
+- 分组统计查询
+
+   ```mysql
+   select count(*) as 新名字 from 表名 group by 字段名;
+   
+   mysql> select id,user_name,count(*) as sex from user group by sex;
+   +----+-----------+-----+
+   | id | user_name | sex |
+   +----+-----------+-----+
+   |  5 | 李四      |   2 |
+   |  4 | 张三      |   4 |
+   +----+-----------+-----+
+   2 rows in set, 1 warning (0.00 sec)
+   
+   select count(*) as 新名字 from 表名 group by 字段名 having 条件;
+   
+   mysql> select id,user_name,count(*) from user group by sex having id >4;
+   +----+-----------+----------+
+   | id | user_name | count(*) |
+   +----+-----------+----------+
+   |  5 | 李四      |        2 |
+   +----+-----------+----------+
+   1 row in set (0.00 sec)
+   ```
+
+- 连接查询
+
+  ```mysql
+  mysql> select * from mark;
+  +----+------+---------+
+  | id | mark | user_id |
+  +----+------+---------+
+  |  1 |   77 |       4 |
+  |  2 |   77 |       5 |
+  |  3 |   80 |       6 |
+  |  4 |   89 |       7 |
+  |  5 |   89 |       8 |
+  +----+------+---------+
+  5 rows in set (0.00 sec)
+  
+  mysql> select * from user;
+  +----+-----------+----------+------------------+-------------+-------+-----+-----+
+  | id | user_name | password | email            | mobile      | fee   | age | sex |
+  +----+-----------+----------+------------------+-------------+-------+-----+-----+
+  |  4 | 张三      | 123456   | zhangsan@163.com | 12345678987 | 11.11 |   1 |   1 |
+  |  5 | 李四      | 666666   | hahha@163.com    | lzb@163.com | 10.00 | 100 |   0 |
+  |  6 | 王五      | 888888   | hahha@163.com    | 45214563211 | 55.22 |   1 |   1 |
+  |  7 | 赵四      | 666666   | hahha@163.com    | lzb@163.com | 10.00 | 100 |   0 |
+  |  8 | zhangsan  |          |                  |             |  0.00 | 100 |   1 |
+  |  9 | lisi      |          |                  |             |  0.00 | 100 |   1 |
+  +----+-----------+----------+------------------+-------------+-------+-----+-----+
+  6 rows in set (0.00 sec)
+  ```
+
+  - 内连接
+
+    ```mysql
+    mysql> select user.id,user.user_name,mark.mark from user ,mark where user.id = mark.user_id;
+    +----+-----------+------+
+    | id | user_name | mark |
+    +----+-----------+------+
+    |  4 | 张三      |   77 |
+    |  5 | 李四      |   77 |
+    |  6 | 王五      |   80 |
+    |  7 | 赵四      |   89 |
+    |  8 | zhangsan  |   89 |
+    +----+-----------+------+
+    5 rows in set (0.00 sec)
+    ```
+
+  - 左连接
+
+    ```mysql
+    mysql> select user.id,user.user_name,mark.mark from user left join  mark on user.id = mark.user_id;
+    +----+-----------+------+
+    | id | user_name | mark |
+    +----+-----------+------+
+    |  4 | 张三      |   77 |
+    |  5 | 李四      |   77 |
+    |  6 | 王五      |   80 |
+    |  7 | 赵四      |   89 |
+    |  8 | zhangsan  |   89 |
+    |  9 | lisi      | NULL |
+    +----+-----------+------+
+    6 rows in set (0.00 sec)
+    
+    mysql> select user.id,user.user_name,mark.mark from mark left join  user on user.id = mark.user_id;
+    +------+-----------+------+
+    | id   | user_name | mark |
+    +------+-----------+------+
+    |    4 | 张三      |   77 |
+    |    5 | 李四      |   77 |
+    |    6 | 王五      |   80 |
+    |    7 | 赵四      |   89 |
+    |    8 | zhangsan  |   89 |
+    +------+-----------+------+
+    5 rows in set (0.00 sec)
+    ```
+
+  - 右连接
+
+    ```mysql
+    mysql> select user.id,user.user_name,mark.mark from user right join mark on user.id = mark.user_id;
+    +------+-----------+------+
+    | id   | user_name | mark |
+    +------+-----------+------+
+    |    4 | 张三      |   77 |
+    |    5 | 李四      |   77 |
+    |    6 | 王五      |   80 |
+    |    7 | 赵四      |   89 |
+    |    8 | zhangsan  |   89 |
+    +------+-----------+------+
+    5 rows in set (0.00 sec)
+    
+    mysql> select user.id,user.user_name,mark.mark from mark right join user on user.id = mark.user_id;
+    +----+-----------+------+
+    | id | user_name | mark |
+    +----+-----------+------+
+    |  4 | 张三      |   77 |
+    |  5 | 李四      |   77 |
+    |  6 | 王五      |   80 |
+    |  7 | 赵四      |   89 |
+    |  8 | zhangsan  |   89 |
+    |  9 | lisi      | NULL |
+    +----+-----------+------+
+    6 rows in set (0.00 sec)
+    ```
+
+- 联合查询
+
+  ```mysql
+  SQL语句1 union all SQL语句2;//列于列的字段数目要对的上
+  
+  mysql> select * from user union all  select * from mark;
+  ERROR 1222 (21000): The used SELECT statements have a different number of columns
+  
+  mysql> select id,user_name,age from user union all  select * from mark;
+  +----+-----------+-----+
+  | id | user_name | age |
+  +----+-----------+-----+
+  |  4 | 张三      |   1 |
+  |  5 | 李四      | 100 |
+  |  7 | 赵四      | 100 |
+  |  8 | zhangsan  | 100 |
+  |  9 | lisi      | 100 |
+  |  1 | 77        |   4 |
+  |  2 | 77        |   5 |
+  |  3 | 80        |   6 |
+  |  4 | 89        |   7 |
+  |  5 | 89        |   8 |
+  +----+-----------+-----+
+  10 rows in set (0.03 sec)
+  ```
+
+- 子查询
+
+  ```mysql
+  mysql> select * from user;
+  +----+-----------+----------+------------------+-------------+-------+-----+-----+
+  | id | user_name | password | email            | mobile      | fee   | age | sex |
+  +----+-----------+----------+------------------+-------------+-------+-----+-----+
+  |  4 | 张三      | 123456   | zhangsan@163.com | 12345678987 | 11.11 |   1 |   1 |
+  |  5 | 李四      | 666666   | hahha@163.com    | lzb@163.com | 10.00 | 100 |   0 |
+  |  7 | 赵四      | 666666   | hahha@163.com    | lzb@163.com | 10.00 | 100 |   0 |
+  |  8 | zhangsan  |          |                  |             |  0.00 | 100 |   1 |
+  |  9 | lisi      |          |                  |             |  0.00 | 100 |   1 |
+  +----+-----------+----------+------------------+-------------+-------+-----+-----+
+  5 rows in set (0.00 sec)
+  
+  mysql> select * from mark;
+  +----+------+---------+
+  | id | mark | user_id |
+  +----+------+---------+
+  |  1 |   77 |       4 |
+  |  2 |   77 |       5 |
+  |  3 |   80 |       6 |
+  |  4 |   89 |       7 |
+  |  5 |   89 |       8 |
+  +----+------+---------+
+  5 rows in set (0.00 sec)
+  
+  mysql> select * from user where id in (select user_id from mark);
+  +----+-----------+----------+------------------+-------------+-------+-----+-----+
+  | id | user_name | password | email            | mobile      | fee   | age | sex |
+  +----+-----------+----------+------------------+-------------+-------+-----+-----+
+  |  4 | 张三      | 123456   | zhangsan@163.com | 12345678987 | 11.11 |   1 |   1 |
+  |  5 | 李四      | 666666   | hahha@163.com    | lzb@163.com | 10.00 | 100 |   0 |
+  |  7 | 赵四      | 666666   | hahha@163.com    | lzb@163.com | 10.00 | 100 |   0 |
+  |  8 | zhangsan  |          |                  |             |  0.00 | 100 |   1 |
+  +----+-----------+----------+------------------+-------------+-------+-----+-----+
+  4 rows in set (0.03 sec)
+  ```
+
+- LIMIT的使用
+
+   ```mysql
+   mysql> select * from user limit 2;
+   +----+-----------+----------+------------------+-------------+-------+-----+-----+
+   | id | user_name | password | email            | mobile      | fee   | age | sex |
+   +----+-----------+----------+------------------+-------------+-------+-----+-----+
+   |  4 | 张三      | 123456   | zhangsan@163.com | 12345678987 | 11.11 |   1 |   1 |
+   |  5 | 李四      | 666666   | hahha@163.com    | lzb@163.com | 10.00 | 100 |   0 |
+   +----+-----------+----------+------------------+-------------+-------+-----+-----+
+   2 rows in set (0.00 sec)
+   
+   mysql> select * from user order by id desc limit 3,2;
+   +----+-----------+----------+------------------+-------------+-------+-----+-----+
+   | id | user_name | password | email            | mobile      | fee   | age | sex |
+   +----+-----------+----------+------------------+-------------+-------+-----+-----+
+   |  5 | 李四      | 666666   | hahha@163.com    | lzb@163.com | 10.00 | 100 |   0 |
+   |  4 | 张三      | 123456   | zhangsan@163.com | 12345678987 | 11.11 |   1 |   1 |
+   +----+-----------+----------+------------------+-------------+-------+-----+-----+
+   2 rows in set (0.00 sec)
+   
+   mysql> select * from user order by id desc limit 1;
+   +----+-----------+----------+-------+--------+------+-----+-----+
+   | id | user_name | password | email | mobile | fee  | age | sex |
+   +----+-----------+----------+-------+--------+------+-----+-----+
+   |  9 | lisi      |          |       |        | 0.00 | 100 |   1 |
+   +----+-----------+----------+-------+--------+------+-----+-----+
+   1 row in set (0.00 sec)
+   ```
+
+   
