--- a/_posts/2020-2-16-Mysql的基本知识.md
+++ b/_posts/2020-2-16-Mysql的基本知识.md
@@ -373,7 +373,8 @@ delete from 表名 where 条件；
 
 #### DQL
 
-基本查询语句
+- 基本查询语句
+
 
 ```mysql
 select * from 表名 where 条件;	
@@ -390,7 +391,7 @@ mysql> select * from user;
 +----+-----------+----------+------------------+-------------+-------+-----+
 4 rows in set (0.07 sec)
 ```
-过滤重复的列值
+- 过滤重复的列值
 
 ```mysql
 select distinct 字段1 from 表名;	
@@ -404,7 +405,7 @@ mysql> select distinct email from user;
 +------------------+
 2 rows in set (0.00 sec)
 ```
-连接多个字段并重新命名
+- 连接多个字段并重新命名
 
 ```mysql
 select concat(字段1,字段2,....) as 新字段名 from 表名;
@@ -420,7 +421,7 @@ mysql> select concat(user_name,email,age)as new_name from user;
 +-------------------------+
 4 rows in set (0.00 sec)
 ```
-连接多个字段并且在每两个字段之间添加分隔符
+- 连接多个字段并且在每两个字段之间添加分隔符
 
 ```mysql
 select concat_ws('分隔符',字段1,字段2,....) as 新字段名 from 表名;
