--- a/_posts/2020-4-16-day_02.md
+++ b/_posts/2020-4-16-day_02.md
@@ -55,6 +55,8 @@ tags:
 
 - **DNS**（**D**omain **N**ame **S**ystem,也叫做域名系统）是[互联网](https://zh.wikipedia.org/wiki/%E4%BA%92%E8%81%94%E7%BD%91)的一项服务。它作为将[域名](https://zh.wikipedia.org/wiki/%E5%9F%9F%E5%90%8D)和[IP地址](https://zh.wikipedia.org/wiki/IP%E5%9C%B0%E5%9D%80)相互[映射](https://zh.wikipedia.org/wiki/%E6%98%A0%E5%B0%84)的一个[分布式数据库](https://zh.wikipedia.org/wiki/%E5%88%86%E5%B8%83%E5%BC%8F%E6%95%B0%E6%8D%AE%E5%BA%93)，能够使人更方便地访问[互联网](https://zh.wikipedia.org/wiki/%E4%BA%92%E8%81%94%E7%BD%91)。 
 
+  ![网络通信](/img/day_02_01.png)
+
 # 基本的DOS命令
 
 - `cls`:清除屏幕。
@@ -115,3 +117,15 @@ tags:
 - `shutdown -a`：取消定时。
 
 - `shutdown -l`：注销，和`logoff`效果一样。
+
+- `nslookup 域名`：解析域名。
+
+- `ping 目标地址`：测试网络连通性。
+
+  - `-t`：一直测试。
+
+  - `-n 数字`：修改包的数量。
+
+    > `ping`不通的两种可能：对方不在线或者对方开着防火墙。
+    >
+- `ipconfig /all`：查看全部的`IP`。
