--- a/_posts/2020-4-18-day_03.md
+++ b/_posts/2020-4-18-day_03.md
@@ -15,3 +15,40 @@ tags:
 
 # 批处理编写
 
+[批处理](https://baike.baidu.com/item/%E6%89%B9%E5%A4%84%E7%90%86/1448600)，顾名思义就是进行批量的处理。[批处理](https://baike.baidu.com/item/%E6%89%B9%E5%A4%84%E7%90%86/1448600)文件是扩展名为·bat 或·cmd的文本文件，包含一条或多条命令，由DOS或Windows系统内嵌的命令[解释器](https://baike.baidu.com/item/%E8%A7%A3%E9%87%8A%E5%99%A8/10418965)来解释运行。
+
+ [批处理](https://baike.baidu.com/item/%E6%89%B9%E5%A4%84%E7%90%86)的本质，是一堆DOS命令按一定顺序排列而形成的集合。 
+
+## 基本的批处理命令
+
+- `@echo off`：屏蔽执行的过程，只显示执行的结果，**建议放在第一行。**
+
+- `pause`：暂停批处理运行。
+
+- `title`：给批处理设置标题。
+
+- `echo.`：执行**空一行**。
+
+- `> nul 2 > nul`：`>`是重定向符号，`> nul`是把前面执行的正确结果输出到空设备中，`2 > nul`是把前面执行的错误结果执行到空设备中；**二者一起的意思是不管前面执行的结果正确与否，都不显示在控制台中。**
+
+- `set`：用于设置变量。加上`/p`选项后，表示变量是由用户自己输入的，且变量`=`后面的字符串变成了对于该变量的说明，而不是该变量的值。
+
+- `:`和`goto`：`:`为设置一个标签块，`goto`表示跳转到指定的标签，然后从该标签块的第一个语句开始执行批处理程序。
+
+  > 批处理程序不会只会识别标签并且输出标签后面的东西，但不会把标签输出。
+
+- `start`：如果什么都不加，表示打开`cmd`窗口，否则为调用外部程序（扩展名为`.exe`）。
+
+- `rem`：设置注释。
+
+- `ntsd -c q -pn 文件名.exe`和`taskkill /im /f .exe`：强制删除指定进程。（win 2003 或者XP系统）
+
+# 用户与组管理
+
+每一个用户都有自己唯一的`SID`（安全标识符）。`SID`分为`用户SID`和`系统SID`，在windows系统下管理员的`用户SID`是`500`，而普通的`用户SID`是从`1000`开始。
+
+查看`SID`使用`whoami/user`：
+
+![SID](/img/day_03_01.png)
+
+Windows系统中的账户密码都存放在：`c:\windows\system32\config\SAM`中。在windows系统上，默认密码的**最长有效期是42天**。
