--- a/_posts/2020-4-18-day_03.md
+++ b/_posts/2020-4-18-day_03.md
@@ -15,7 +15,7 @@ tags:
 
 # 批处理编写
 
-[批处理](https://baike.baidu.com/item/%E6%89%B9%E5%A4%84%E7%90%86/1448600)，顾名思义就是进行批量的处理。[批处理](https://baike.baidu.com/item/%E6%89%B9%E5%A4%84%E7%90%86/1448600)文件是扩展名为·bat 或·cmd的文本文件，包含一条或多条命令，由DOS或Windows系统内嵌的命令[解释器](https://baike.baidu.com/item/%E8%A7%A3%E9%87%8A%E5%99%A8/10418965)来解释运行。
+[批处理](https://baike.baidu.com/item/%E6%89%B9%E5%A4%84%E7%90%86/1448600)，顾名思义就是进行批量的处理。[批处理](https://baike.baidu.com/item/%E6%89%B9%E5%A4%84%E7%90%86/1448600)文件是扩展名为`·bat` 或`·cmd`的文本文件，包含一条或多条命令，由DOS或Windows系统内嵌的命令[解释器](https://baike.baidu.com/item/%E8%A7%A3%E9%87%8A%E5%99%A8/10418965)来解释运行。
 
  [批处理](https://baike.baidu.com/item/%E6%89%B9%E5%A4%84%E7%90%86)的本质，是一堆DOS命令按一定顺序排列而形成的集合。 
 
@@ -45,6 +45,8 @@ tags:
 
 # 用户与组管理
 
+## 用户管理
+
 每一个用户都有自己唯一的`SID`（安全标识符）。`SID`分为`用户SID`和`系统SID`，在windows系统下管理员的`用户SID`是`500`，而普通的`用户SID`是从`1000`开始。
 
 查看`SID`使用`whoami/user`：
@@ -52,3 +54,61 @@ tags:
 ![SID](/img/day_03_01.png)
 
 Windows系统中的账户密码都存放在：`c:\windows\system32\config\SAM`中。在windows系统上，默认密码的**最长有效期是42天**。
+
+### 内置账号和家目录
+
+- 给登陆者使用的账号
+  - `administrator`:管理员账号，除了系统账户以外的权限最高的账号。
+  - `guest`:来宾账号，权限最低。只能访问特定的对象，但是不可以更改对象。
+- 计算机服务组件相关的系统账号
+  - `system`:系统账号，权限最高。
+  - `local services`:本地服务账号，和普通用户权限一样。
+  - `network sercies`：网络服务账号，和普通用户权限一样。
+- **家目录**：每一个用户都有自己的家目录。在`win7/win2008`中的路径是`c:\用户\`，在`xp/win2003`中的路径是`c:\Doucuments and Settings\`。
+
+### 常用的用户管理命令
+
+- `net user`:查看当前系统的用户列表。
+- `net user 用户名 密码 /add`:创建一个新用户。
+- `net user  用户名 密码`:修改用户密码。
+- `net user 用户名 /del`：删除用户。
+- `net user 用户名 /active:yes或者no`：激活/禁用用户。
+
+## 组管理
+
+### 内置组
+
+内置组的权限**默认**是已经被系统赋予了得。
+
+- `administrators`：管理员组。
+- `guests`：来宾组。
+- `users`：普通用户组。
+- `network`：网络配置组。
+- `print`：打印机组。
+- `Remote Desktop`：远程桌面组。
+
+### 常用的组管理命令
+
+- `net localgroup`:查看组列表。
+- `net localgroup 组名`：查看该组的成员。
+- `net localgroup 组名 /add`：添加一个新的组。
+- `net localgroup 组名 /del`：删除一个组。
+- `net localgroup 组名 用户 /add`：添加一个用户到指定的组。
+- `net localgroup 组名 用户 /del`：把用户从该组中删除。
+
+# 远程管理
+
+## 图形化界面连接
+
+1. **配置网络，实现客户机与服务器连接正常。**
+2. 服务器上，右键点击我的电脑 ->远程设置->启动此计算机远程桌面。
+3. 客户机输入`mstsc`命令，打开远程连接工具。
+4. 输入`IP地址`,连接到远程。
+5. 输入在**服务器上**已经创建的用户名和密码。如果是非管理员登陆，需要在**服务器上**把该登陆用户添加到`Remote Desktop Users`**组**中。
+
+## Telnet协议连接
+
+1. **配置网络，实现客户机与服务器连接正常。**
+2. 服务器开启允许被telnet远程控制：输入`services.msc`，并开启**telnet**服务。Win2008以上的系统需要在此步骤之前先安装`telnet`服务；右键我的电脑 ->点击管理 ->点击功能 ->添加telnet服务。
+3. 打开`cmd`，输入`telnet ip地址`。
+4. 输入用户名和密码。如果是非管理员登陆，需要在服务器上把该用户添加到`TelnetClients`**组**中。
