--- a/_posts/2020-4-18-day_03.md
+++ b/_posts/2020-4-18-day_03.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:     day_03
-subtitle:  批处理编写、用户管理、服务器远程管理、破解系统密码
+subtitle:  批处理编写、用户管理、服务器远程管理
 date:       2020-4-18
 author:     One-Punch-Man
 header-img: "img/man-6.jpg"
