--- a/_posts/2020-4-21-day_04.md
+++ b/_posts/2020-4-21-day_04.md
@@ -10,3 +10,36 @@ tags:
      - 网络安全
      - 千锋教育
 ---
+
+# NTFS权限
+
+## 概述
+
+通过设置不同的NTFS权限，可以实现不同的用户访问不同的对象的权限。用户只能根据分配的权限对对象进行权限以内的操作。
+
+### 文件系统
+
+文件系统是在存储设备上组织文件的方法。严格地说，文件系统是一套实现了数据的存储、分级组织、访问和获取等操作的抽象数据类型。
+
+#### 常用的文件系统
+
+- `NTFS`:现在windows下主流的文件系统。
+- `FAT`：windows下的一种文件系统。
+- `EXT`：linux下的一种文件系统。
+
+## 特点
+
+- 可以提高读写性能。
+- 可靠性。
+  - 支持加密文件系统
+  - **访问控制列表(ACL)**
+- 磁盘利用率高
+  - 支持压缩
+  - 支持磁盘配额
+- 支持存储单个文件大于4G
+
+## NTFS权限修改
+
+### 文件权限
+
+![image-20200515014044745](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\image-20200515014044745.png)
