--- a/_posts/2020-4-21-day_04.md
+++ b/_posts/2020-4-21-day_04.md
@@ -42,4 +42,4 @@ tags:
 
 ### 文件权限
 
-![image-20200515014044745](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\image-20200515014044745.png)
+![image-20200515014044745](\img\day_04_01.png)
