--- a/_posts/2020-4-21-day_04.md
+++ b/_posts/2020-4-21-day_04.md
@@ -43,3 +43,40 @@ tags:
 ### 文件权限
 
 ![image-20200515014044745](\img\day_04_01.png)
+
+### 文件夹权限
+
+![image-20200515014933898](\img\day_04_02.png)
+
+### 取消权限继承
+
+只有取消权限继承，才可以对该文件或者文件夹进行文件权限操作。
+
+1. 右键点击文件或文件夹；
+2. 点击安全；
+3. 点击高级；
+4. 把第一个`√`点击去掉；
+5. 在弹出的对话框中点击**复制**。
+
+### 强制继承
+
+使用了强制继承后，文件夹里面的文件及文件夹都会应用次文件夹的权限设置。
+
+1. 右键点击文件或文件夹；
+2. 点击安全；
+3. 点击高级；
+4. 在第二个小框框打上`√`。
+
+### 文件的复制和移动
+
+- **同**一个分区进行文件的**复制**，文件的权限**会**被目标文件夹的权限所**覆盖**。
+- **不同**一个分区进行文件的**复制**，文件的权限**会**被目标文件夹的权限所**覆盖**。
+- **同**一个分区进行文件的**移动**，文件的权限**不会**被目标文件夹的权限所**覆盖**。
+- **不同**一个分区进行文件的**移动**，文件的权限**会**被目标文件夹的权限所**覆盖**。
+
+### 复杂的情况
+
+- 当用户是属于多个组的时候，这个用户的权限是多个组权限的并集。
+- 当用户属于多个组的时候，并且设置了拒绝权限，那么拒绝权限是第一优先级。
+- `administrator`可以把任意一个文件夹或者文件的所有者强制设置为`administrator`，并且删除原有使用者的权限设置。
+
