--- a/_posts/2020-4-21-day_04.md
+++ b/_posts/2020-4-21-day_04.md
@@ -76,7 +76,38 @@ tags:
 
 ### 复杂的情况
 
-- 当用户是属于多个组的时候，这个用户的权限是多个组权限的并集。
-- 当用户属于多个组的时候，并且设置了拒绝权限，那么拒绝权限是第一优先级。
+- 当用户是属于多个组的时候，这个用户的权限是多个组权限的**并集**。
+- 当用户属于多个组的时候，并且设置了拒绝权限，那么**拒绝权限是第一优先级**。
 - `administrator`可以把任意一个文件夹或者文件的所有者强制设置为`administrator`，并且删除原有使用者的权限设置。
 
+# 共享服务器
+
+## 创建共享文件夹
+
+1. 右键点击需要共享的文件夹；
+2. 点击属性 -> 共享 ->点击共享此文件夹 ->设置共享名；（在输入的名字后面加上`$`，表示该文件设置为隐藏文件或者文件夹）
+3. 点击权限 ->选中`everyone`，点击完全控制。
+
+由于在远程连接时，文件的权限不仅受共享权限的限制，还受`NTFS`权限的限制，而且取两者的交集；所以建议设置共享权限时，统一给`everyone`设置为**完全控制**，再到`NTFS`权限中设置具体的访问权限。
+
+## 访问共享文件夹
+
+1. 使用`win`+`r`快捷键打开运行窗口；
+2. 输入`\\远程服务器地址\共享名`。（如果是隐藏文件夹，需要在共享名后面加上`$`）
+
+## 共享相关命令
+
+- `net share`：查看本机的共享。
+- `net share 共享名`：查看该共享的相关信息。
+- `net share 共享名=共享文件(夹)路径`：创建共享。
+- `net share 共享名 /del`：删除共享，但不能删除**默认共享**，只能删除自己创建的共享。
+
+## 屏蔽共享服务
+
+1. 使用`win`+`r`快捷键，打开运行窗口，输入`regedit`，打开注册表。
+
+2. 百度搜索共享注册表的位置，找到相应的位置后，新建`DWORD`类型的`AutoShareServer`文件，值为`0`。
+
+3. 打开`services.msc`，找到`server`服务，禁用且关闭。
+
+   > `445端口`是负责提供局域网中的共享文件、打印机服务的端口。
