--- a/_posts/2020-4-23-day_05.md
+++ b/_posts/2020-4-23-day_05.md
@@ -111,6 +111,33 @@ DHCP原理也被叫作为DHCP的租约过程：
 1. 手动设置服务器IP地址
 2. 打开我的电脑，点击`CD驱动器:`，在弹出的页面中选择第三项；双击网络服务，选择DNS，一路确定；
 3. 打开`cmd`，输入 `netstat -an`，出现`TCP 53`和`UDP 53`端口，说明安装成功；
+4. 点击开始 -> 管理工具 -> DNS ->正向查找区域 ->右键选择兴建区域；
+5. 除了输入需要解析的**域名**以外其他都点击下一步；
+6. 新建主机记录（**A记录**），里面填写需要解析的**主机名**。（正向解析）
+7. 先去反向查找区域新建区域，里面填写DNS服务器IP地址前三位，然后去正想查找区域新建主机记录，勾上创建相关指针记录，ip地址为DNS服务器IP地址。（反向解析）
+
+- `nslookup 域名`：客户机上手动解析域名。
+- `ipconfig /flushdns`:客户机上清除DNS缓存。
+- `ipconfig /displaydns`：客户机上显示DNS缓存。
+- 点击查看 -> 高级 -> 清除缓存：服务器上清楚DNS缓存。
+
+### 客户机上的DNS解析
+
+1. 去DNS缓存上找；
+2. 本地的`hosts`文件里面找；
+3. 发送到本地DNS解析服务器。
+
+### 服务器上的DNS解析
+
+1. DNS高速缓存上找；
+2. 本地的区域文件上找；
+3. 有转化器则发送出去；
+4. 发送到根服务器。
+
+## 两个实验
+
+1. 搭建两台DNS服务器，一个客户端，其中一个DNS服务器中有转化器；能完成域名解析、缓存查看、缓存清除、给DNS服务器设置名字、解析的网站设置别名、设置转发器、设置备份DNS服务器。
+2. 使两台虚拟机正常上网，一台为客户机，一台为DNS服务器，重新完成上述的实验。
 
 
 
