--- a/_posts/2020-4-23-day_05.md
+++ b/_posts/2020-4-23-day_05.md
@@ -92,6 +92,13 @@ DHCP原理也被叫作为DHCP的租约过程：
 - `TCP 53`
 - `UDP 53`
 
+## DNS服务器分类
+
+- **主要名称服务器**：服务器创建了解析区域。这里的区域数据是可读可修改的。
+- **辅助名称服务器**：辅助DNS服务器不创建区域，它的区域数据是从主DNS服务器复制来的，因此，区域数据只能读不能修改，也称为副本区域数据。
+- **根名称服务器**：没有上级服务器，全球共有13个根域服务器。
+- **高速缓存名称服务器**：服务器上不存在任何区域数据，它只帮助DNS客户机向其他DNS服务器进行查询，然后将查询到的数据存储在一份高速缓存Cache中，响应客户机的查询请求。
+
 ## DNS解析方式
 
 ### 按查询方式
@@ -120,6 +127,14 @@ DHCP原理也被叫作为DHCP的租约过程：
 - `ipconfig /flushdns`:客户机上清除DNS缓存。
 - `ipconfig /displaydns`：客户机上显示DNS缓存。
 - 点击查看 -> 高级 -> 清除缓存：服务器上清楚DNS缓存。
+
+### 域名解析记录类型
+
+- A记录：正向解析记录
+- CNAME记录：别名
+- PRT记录：反向解析记录
+- MX记录：邮件交换记录
+- NS记录：域名服务器解析，说明是哪一台DNS服务器来解析这个域名
 
 ### 客户机上的DNS解析
 
