--- a/_posts/2020-4-27-day_07.md
+++ b/_posts/2020-4-27-day_07.md
@@ -131,3 +131,51 @@ tags:
 - 检查`DNS`解析是否成功；
 - 考虑是否要清除DNS缓存；
 - 检查登陆时是否选择的是域登陆。
+
+## 组织单位（OU）
+
+组织单位(Organizational Unit)是一些存放**用户**、**组**、**计算机**和**其它组织单位**的AD容器，是可以指派**组策略**设置或委派管理权限的最小作用域或单元。
+
+## 组策略（GPO）
+
+**组策略**（**Group Policy**）可以控制用户帐户和计算机帐户的工作环境。组策略提供了操作系统、应用程序和[活动目录](https://baike.baidu.com/item/活动目录)中用户设置的集中化管理和配置。
+
+**组策略在域中是基于OU来实现的。**
+
+- 域中的组策略下发后，用户实现组策略的顺序是：**LSDOU**，在应用时发生了冲突，则只有靠后的组策略应用才能生效：
+
+  ![24](\img\day_07_24.png)
+
+## 实验
+
+1. 打开`Active Directory 用户和计算机`，右键demo.com新建**组织单位**；
+
+   ![25](\img\day_07_25.png)
+
+2. 输入名称（可以为中文）；点击确定。这样就新建好了一个组织单位。
+
+   ![26](\img\day_07_26.png)
+
+3. 重复上述操作，完成组织结构的部署。
+
+   ![27](\img\day_07_27.png)
+
+4. 随便找一个文件，右键属性 -> 点击共享，打开**高级共享** ->点击共享此文件夹 ->点击权限 ->点击添加 ->输入`domain users`，点击确定；在点击安全 ->点击编辑 ->点击添加 ->输入`domain users`，点击确定就可以了。（**服务器上域共享文件夹**）
+
+   ![27](\img\day_07_31.png)
+
+   ![27](\img\day_07_32.png)
+
+5. 点击`Users`,选择用户，点击移动，把他分配到创建的组织单位下：点击`Computers`,进行同样的操作。
+
+   ![28](\img\day_07_28.png)
+
+6. 开始 ->管理工具 - >  组策略管理 -> 选择刚创建的**组织结构** ->点击新建GPO ->输入名字 ->点击确定；
+
+   ![29](\img\day_07_29.png)
+
+7. 选择创建好的组策略，右键编辑 -> 选择用户配置 ->策略 -> 管理模块 ->桌面 -> Active Desktop -> 双击桌面墙纸；点击启动 ->输入文件共享路径，点击确定。
+
+   ![30](\img\day_07_30.png)
+
+### 组策略的执行顺序
