--- a/_posts/2020-4-27-day_07.md
+++ b/_posts/2020-4-27-day_07.md
@@ -179,3 +179,9 @@ tags:
    ![30](\img\day_07_30.png)
 
 ### 组策略的执行顺序
+
+- **正常顺序**：LSDOU顺序。
+- **强制执行**：上级OU对下级OU进行强制执行。
+- **阻止继承**：下级OU阻止继承上级OU的组策略。
+
+> 当下级点击阻止继承，上级点击强制执行时；上级的强制**有效**。
