--- a/_posts/2020-4-29-day_08.md
+++ b/_posts/2020-4-29-day_08.md
@@ -80,5 +80,25 @@ Hash算法也被称为散列算法，Hash算法虽然被称为算法，但实际
 
 ![RSA](\img\day_08_01.jpg)
 
-> 公钥加密技术实现了对信息加密、数字签名等安全保障。
-> 用自己的私钥对摘要加密得出的密文就是数字签名。
+> - 公钥加密技术实现了对信息加密、数字签名等安全保障。
+> - 用自己的私钥对摘要加密得出的密文就是数字签名。
+
+## 数字证书
+
+数字证书是指在互联网通讯中标志通讯各方身份信息的一个数字认证，人们可以在网上用它来识别对方的身份。 [1] 
+
+因此数字证书又称为数字标识。数字证书对网络用户在计算机网络交流中的信息和数据等以**加密或解密**的形式保证了信息和数据的**完整性**和**安全性**。
+
+### 组成
+
+1. **证书数据**
+   - 版本信息，用来与X.509的将来版本兼容；
+   - 证书序列号，每一个由CA发行的证书必须有一个惟一的序列号；
+   - CA所使用的签名算法；
+   - 发行证书CA的名称；
+   - 证书的有效期限；
+   - 证书主题名称；
+   - 被证明的公钥信息，包括公钥算法、公钥的位字符串表示；
+   - 包含额外信息的特别扩展。
+2. **CA的数字签名**
+
